# unity-egui-rust

./: Build_Android.md  Cargo.toml  LICENSE  README.md
demo/: Cargo.toml
demo/src/: lib.rs
proto/: common.proto  input.proto  output.proto
src/: bridge.rs  input.rs  lib.rs
src/proto/: common.rs  input.rs  mod.rs  output.rs
tests/: test.rs
