[package]
name = "uegui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egui = { features = ["bytemuck", "unity"], version = "0.21" }
protobuf = { version = "3.2" }
bytemuck = { version = "1.12" }
log = { version = "0.4" }
chrono = { version = "0.4" }