[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
uegui = { path = ".." }
egui = { git = "https://github.com/lazytiger/egui.git" }
eframe = { git = "https://github.com/lazytiger/egui.git" }
egui_demo_lib = { git = "https://github.com/lazytiger/egui.git" }